--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://examplesite.com"
+baseURL = "https://bookworm-hugo.netlify.app/"
 title = "Bookworm - Personal Blog Template"
 theme = "bookworm"
 # post pagination
