--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -74,7 +74,7 @@ h6 = "16px"
 white = "#ffffff"
 black = "#000000"
 dark = "#152035"
-gray = "#80848d"
+gray = "#747577"
 light = "#FAFAFA"
 color_primary = "#01AD9F"
 
