update readme.md file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookworm-light-hugo",
+  "name": "bookworm-light",
   "version": "3.4.2",
   "license": "UNLICENSED",
   "author": "gethugothemes",
